--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -23,16 +23,12 @@ body{
 }
 
 .wrapper {
-	// display: flex;
    max-width: 1600px;
-	height: 5000px;
    margin:0px auto;
-  
-}
+  }
 
 .headercontent {
-
-	margin:0px auto;
+margin:0px auto;
    
 }
 
@@ -85,49 +81,54 @@ margin: 30px 0px 0px 60px;
 .header-top_item5 {
 	color: #000000;
 margin: 30px 40px 0px 0px;
+transition-duration: 5s;
 }
 .line {
     width: 94%; /* ширина линии */
     height: 2px; /* высота / толщина линии */
     background: #000000;
     border: 0; /* рамка вокруг разделительной линии (уберем ее) */
-    margin: 45px 0px 0px 60px;
+    margin: 45px 0px 45px 60px;
 
 }
-.header-bottom {
-display: flex;
+.headerbottom {
+
+margin: 0px 0px 40px 0px;
 
 }
-.headercontent {
-text-align: center;
-
+.headerbottom__content {
+	
+	display:flex;
+	height: 120px;
 }
 
 .leftlogo {
-   
+	
+   flex-basis:20%;
    color: #000000;
    font-family: "CenturyGothic-Bold";
    font-size: 50px;
-   margin: 50px 0px 0px 100px;
+   padding: 2px 0px 0px 70px;
+   
 }
 .titlecenter {
+
 	
-	
+	flex-basis:60%;
    color: #000000;
    font-family: "CenturyGothic-Bold";
    font-size: 18px;
-  margin: 100px 0px 0px 350px;
-	text-align: center;
-
+   text-align: center;
 }
 .Sweet {
-	margin: 0px 0px 0px 43px;
+
 }
 
 
 
 .imgavtor img {
 	width: 100%;
+	border-radius: 1%;
 }
 
 
@@ -135,7 +136,7 @@ text-align: center;
 .about {
 
 	background-color: #e9d3d1;
-	
+	margin: 50px 0px 0px 0px;
 }
 .aboutme {
 text-align: center;
@@ -193,7 +194,7 @@ flex: 0 1 25%
 }
 .programs__item_img img {
 	
-	// width: 100%;
+	
 }
 .programs__item_title {
 	
@@ -230,4 +231,33 @@ flex: 0 1 25%
 
 .picture__item img{
 	width: 100%;
+}
+
+.footer {
+	height: 730px;
+}
+.footer__content {}
+.uppart {}
+.uppart__content {
+	display:flex;
+flex-direction:column;
+text-align: center;
+}
+.uppart__content_title {
+font-size: 50px;
+margin: 70px 0px 50px 0px;
+}
+.uppart__content_invite {
+font-size: 25px;
+
+}
+.socnetworks {}
+.socnetworks__content {
+	display:flex;
+justify-content:center;
+align-items:center;
+height: 250px;
+}
+.socnetworks__content_item {
+	margin: 45px;
 }
