--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,7 @@ body {
 
 .header-top_item5 {
   color: #000000;
-  margin: 30px 40px 0px 0px;
-  -webkit-transition-duration: 5s;
-  -o-transition-duration: 5s;
-  transition-duration: 5s; }
+  margin: 30px 40px 0px 0px; }
 
 .line {
   width: 94%;
@@ -159,7 +156,10 @@ body {
 
 .imgavtor img {
   width: 100%;
-  border-radius: 1%; }
+  border-radius: 1%;
+  -webkit-transition-duration: 3s;
+  -o-transition-duration: 3s;
+  transition-duration: 3s; }
 
 .about {
   background-color: #e9d3d1;
