--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -81,7 +81,10 @@ margin: 30px 0px 0px 60px;
 .header-top_item5 {
 	color: #000000;
 margin: 30px 40px 0px 0px;
-transition-duration: 5s;
+// transition-duration: 3s;
+
+
+
 }
 .line {
     width: 94%; /* ширина линии */
@@ -129,6 +132,7 @@ margin: 0px 0px 40px 0px;
 .imgavtor img {
 	width: 100%;
 	border-radius: 1%;
+	transition-duration: 3s;
 }
 
 
