--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -122,9 +122,10 @@ margin: 0px 0px 40px 0px;
    font-family: "CenturyGothic-Bold";
    font-size: 18px;
    text-align: center;
+   transition-duration: 5s;
 }
 .Sweet {
-
+transition-duration: 3s;
 }
 
 
@@ -132,7 +133,7 @@ margin: 0px 0px 40px 0px;
 .imgavtor img {
 	width: 100%;
 	border-radius: 1%;
-	
+
 }
 
 
