--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,14 @@ body {
 
 .programs__item_title {
   font-size: 18px;
-  padding: 10px 0px 0px 0px; }
+  padding: 10px 0px 0px 0px;
+  -webkit-transition: all 0.5s ease-out 0s;
+  -o-transition: all 0.5s ease-out 0s;
+  transition: all 0.5s ease-out 0s; }
+
+.programs__item_title:hover {
+  color: #DC143C;
+  font-size: 20px; }
 
 .Portfolio {
   background-color: #e9d3d1;
